# ek9

./: .gitattributes  .gitignore  BYTECODE_VALIDATION_PLAN.md  CALLDETAILS_BUILDER_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CLAUDE_CODE_MCP_SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTROL_FLOW_CANONICAL_SCOPE_ARCHITECTURE.md  CONTROL_FLOW_IMPLEMENTATION_STATUS.md  CONTROL_FLOW_IR_IMPLEMENTATION_PLAN.md  EK9_ACADEMIC_LANGUAGE_INNOVATIONS.md  EK9_ADVANCED_FUZZING_STRATEGIES.md  EK9_ADVANCED_GENERICS_FUZZING_PLAN.md  EK9_AI_CODE_VOLUME_CRISIS_AND_COMPILER_CONSTRAINTS.md  EK9_AI_CODE_VOLUME_CRISIS_EXECUTIVE_SUMMARY.md  EK9_AI_DEVELOPMENT_PLATFORM.md  EK9_AI_FRIENDLY_LANGUAGE_STRATEGY.md  EK9_ANNOTATION_VALIDATION.md  EK9_ARC_MEMORY_MANAGEMENT.md  EK9_ARC_OWNERSHIP_TRANSFER_PATTERN.md  EK9_ASSIGNMENT_OPERATORS_AND_GUARDS.md  EK9_BACKEND_IMPLEMENTATION_ARCHITECTURE.md  EK9_BACKEND_TESTING_STATUS_REVIEW.md  EK9_BIDIRECTIONAL_FLOW_AND_ARC.md  EK9_BUILT_IN_TYPE_TESTING.md  EK9_CLAUDE_LEARNING_EXAMPLES.md  EK9_COALESCING_OPERATORS_IR_GENERATION.md  EK9_CODING_STANDARDS.md  EK9_COMPILER_FUZZING_GUIDE.md  EK9_COMPILER_FUZZING_IMPLEMENTATION.md  EK9_COMPILER_FUZZING_STRATEGY.md  EK9_COMPILER_PHASES.md  EK9_COMPILER_TESTING_COMPREHENSIVE_STRATEGY.md  EK9_COMPILER_TESTING_COMPREHENSIVE_STRATEGY.md.backup  EK9_COMPILE_TIME_QUALITY_ENFORCEMENT.md  EK9_COMPREHENSIVE_COMPETITIVE_ANALYSIS.md  EK9_COMPREHENSIVE_ERROR_TESTING_STRATEGY.md  EK9_CONSTRUCTS_INTERFACE_ANALYSIS.md  EK9_CONTROL_FLOW_IR_DESIGN.md  (+129 more)
ek9-wrapper/: CMakeLists.txt  pom.xml
ek9-wrapper/src/main/c/: ek9.c
(+5364 files in other folders)
